--- a/GestionUtilisateur-FrontEnd-master3/src/app/side-bar/side-bar.component.html
+++ b/GestionUtilisateur-FrontEnd-master3/src/app/side-bar/side-bar.component.html
@@ -29,23 +29,23 @@
                   <li><a routerLink="/users">Liste des utilisateurs</a></li>
                 </ul>
               </li>
-              <li><a id="formsli" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentAdmin'"><i class="fa fa-address-card" ></i>Personnel<span id="formschevron" class="fa fa-chevron-down"></span></a>
+              <li><a id="formsli" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentGRH'"><i class="fa fa-address-card" ></i>Personnel<span id="formschevron" class="fa fa-chevron-down"></span></a>
               <ul class="nav child_menu">
                 <li><a routerLink="/personnel"><i class="fa fa-address-book"></i>Ajouter Personnel</a></li>
                 <li><a routerLink="/ListeEnseignantP"><i class="fa fa-align-justify"></i>Liste des Personnels</a></li>
               </ul>
             </li>
-            <li><a id="formEnsgVac" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentAdmin'||role=='DirecteurES'"><i class="fa fa-address-card" ></i>Enseignant Vacataire<span id="formschevron" class="fa fa-chevron-down"></span></a>
+            <li><a id="formEnsgVac" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentGRH'||role=='DirecteurES'"><i class="fa fa-address-card" ></i>Enseignant Vacataire<span id="formschevron" class="fa fa-chevron-down"></span></a>
               <ul class="nav child_menu">
                 <li><a routerLink="/AjouterVacataire"><i class="fa fa-address-book"></i>Nouveau Enseignant</a></li>
                 <li><a routerLink="/ListeEnseignantP"><i class="fa fa-align-justify"></i>Liste des Enseignant</a></li>
                 <li><a routerLink="/ConsultationVacation"><i class="fa fa-align-justify"></i>Consulter les Demandes</a></li>
               </ul>
             </li>
-            <li><a id="tablesli" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentAdmin'"><i class="fa fa-table"></i> Congé <span id="tableschevron" class="fa fa-chevron-down"></span></a>
+            <li><a id="tablesli" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentGRH'"><i class="fa fa-table"></i> Congé <span id="tableschevron" class="fa fa-chevron-down"></span></a>
               <ul class="nav child_menu">
-                <li><a routerLink="/conge" *ngIf="role=='Admin'||role=='AgentAdmin'">Ajouter Congé</a></li>
-                <li><a routerLink="/consultationConge" *ngIf="role=='Admin'||role=='AgentAdmin'">Liste des congés</a></li>
+                <li><a routerLink="/conge" *ngIf="role=='Admin'||role=='AgentGRH'">Ajouter Congé</a></li>
+                <li><a routerLink="/consultationConge" *ngIf="role=='Admin'||role=='AgentGRH'">Liste des congés</a></li>
                 <li><a routerLink="/historiqueConge">Historique des congés</a></li>
               </ul>
             </li>
@@ -58,7 +58,7 @@
             </li>
             <li><a id="historique" (click)="anchorClicked($event)" *ngIf="role=='utilisateur'||role=='DirecteurES'" routerLink="/personnelhistorique"><i class="fa fa-book"></i>Historique Congé</a>
             </li>
-            <li><a id="tablesty" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentAdmin'"><i class="fa fa-edit"></i> Mutation <span id="tableschevron" class="fa fa-chevron-down"></span></a>
+            <li><a id="tablesty" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentGRH'"><i class="fa fa-edit"></i> Mutation <span id="tableschevron" class="fa fa-chevron-down"></span></a>
               <ul class="nav child_menu">
                 <li><a routerLink="/mutation">Ajouter Mutation</a></li>
                 <li><a routerLink="/consultationConge">Liste des Mutations</a></li>
@@ -68,7 +68,7 @@
         </div>
         <div class="menu_section">
           <ul class="nav side-menu">
-            <li><a id="additionalli" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentAdmin'"><i class="fa fa-bookmark"></i> Données des Base <span id="additionalchevron" class="fa fa-chevron-down"></span></a>
+            <li><a id="additionalli" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentGRH'"><i class="fa fa-bookmark"></i> Données des Base <span id="additionalchevron" class="fa fa-chevron-down"></span></a>
               <ul class="nav child_menu">
                 <li><a routerLink="/grade">Grade</a></li>
                 <li><a routerLink="/diplome">Diplôme</a></li>
@@ -79,15 +79,16 @@
                 <li><a routerLink="/specialite">Specialité</a></li>
                 <li><a routerLink="/OrgAccueil">Organisme d'Accueil</a></li>
                 <li><a routerLink="/service">Service</a></li>
+                <li><a routerLink="/posteAdmin">Poste Admin</a></li>
               </ul>
             </li> 
-            <li><a id="datali" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentAdmin'"><i class="fa fa-bar-chart-o" ></i> Statistiques <span class="fa fa-chevron-down"></span></a>
+            <li><a id="datali" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentGRH'"><i class="fa fa-bar-chart-o" ></i> Statistiques <span class="fa fa-chevron-down"></span></a>
               <ul class="nav child_menu">
                 <li><a href="/">Chart JS</a></li>
                 <li><a href="/">Chart JS2</a></li>
               </ul>
             </li>  
-            <li><a id="importationli" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentAdmin'"><i class="fa fa-windows"></i> Importation <span class="fa fa-chevron-down"></span></a>
+            <li><a id="importationli" (click)="anchorClicked($event)" *ngIf="role=='Admin'||role=='AgentGRH'"><i class="fa fa-windows"></i> Importation <span class="fa fa-chevron-down"></span></a>
               <ul class="nav child_menu">
                 <li><a href="/">Fichier Excel</a></li>
                 <li><a href="/">Fichier PDF</a></li>
